--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
                     <li><a href="#" target="conteudo">Item 3</a></li>
                     <li><a href="#" target="conteudo">Item 4</a></li>
                     <li><a href="#" target="conteudo">Item 5</a></li>
+                    <li><a href="#" target="conteudo">Item 6</a></li>
+                    <li><a href="#" target="conteudo">Item 7</a></li>
+                    <li><a href="#" target="conteudo">Item 8</a></li>
+                    <li><a href="#" target="conteudo">Item 9</a></li>
+                    <li><a href="#" target="conteudo">Item 10</a></li>
                 </ul>
             </nav>
             <article>
