--- a/model.html
+++ b/model.html
@@ -28,7 +28,9 @@
             </article>
             <article>
                 <h1>ARTICLE</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis molestiae, vero ea autem accusamus, corrupti magnam dolore voluptate consectetur inventore dolores cumque quasi recusandae? A cum ullam officia voluptatibus fugit!</p>
+                <div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis molestiae, vero ea autem accusamus, corrupti magnam dolore voluptate consectetur inventore dolores cumque quasi recusandae? A cum ullam officia voluptatibus fugit!</p>
+                </div>
                 <aside>
                     <h1>ASIDE</h1>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis molestiae, vero ea autem accusamus, corrupti magnam dolore voluptate consectetur inventore dolores cumque quasi recusandae? A cum ullam officia voluptatibus fugit!</p>
