--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
         <section>
             <nav>
                 <ul>
-                    <li><a href="#" target="conteudo">Item 1</a></li>
-                    <li><a href="#" target="conteudo">Item 2</a></li>
-                    <li><a href="#" target="conteudo">Item 3</a></li>
-                    <li><a href="#" target="conteudo">Item 4</a></li>
-                    <li><a href="#" target="conteudo">Item 5</a></li>
-                    <li><a href="#" target="conteudo">Item 6</a></li>
-                    <li><a href="#" target="conteudo">Item 7</a></li>
-                    <li><a href="#" target="conteudo">Item 8</a></li>
-                    <li><a href="#" target="conteudo">Item 9</a></li>
-                    <li><a href="#" target="conteudo">Item 10</a></li>
+                    <li><a href="#">Item 1</a></li>
+                    <li><a href="#">Item 2</a></li>
+                    <li><a href="#">Item 3</a></li>
+                    <li><a href="#">Item 4</a></li>
+                    <li><a href="#">Item 5</a></li>
+                    <li><a href="#">Item 6</a></li>
+                    <li><a href="#">Item 7</a></li>
+                    <li><a href="#">Item 8</a></li>
+                    <li><a href="#">Item 9</a></li>
+                    <li><a href="#">Item 10</a></li>
                 </ul>
             </nav>
             <article>
