Creating form pages

--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
             <h2>Intranet</h2>
         </hgroup>
         <nav>
-            <a href="#" class="button">Home</a>
+            <a href="index.html" class="button">Home</a>
             <a href="#" class="button">Contato</a>
-            <a href="#" class="button">Área Restrita</a>
+            <a href="login.html" class="button">Área Restrita</a>
         </nav>
     </header>
     <main>
         <section>
             <nav>
                 <ul>
+                    <li><a href="upload.html">Upload</a></li>
                     <li><a href="#">Item 1</a></li>
                     <li><a href="#">Item 2</a></li>
                     <li><a href="#">Item 3</a></li>
@@ -34,10 +35,9 @@
                     <li><a href="#">Item 7</a></li>
                     <li><a href="#">Item 8</a></li>
                     <li><a href="#">Item 9</a></li>
-                    <li><a href="#">Item 10</a></li>
                 </ul>
             </nav>
-            <article>
+            <article id="content">
                 <h1>História da Mello System</h1>
         
                 <p>A Mello System surgiu apenas porque eu <strong>(Vinicius Mello dos Santos)</strong> decidi dar um nome para os trabalhos que eu venho desenvolvendo durante meus estudos. Enfim, é algo que não foi implementado mas vem criando forma com o passar do tempo. Ainda não sei se algum dia virá ser algum projeto real e concreto mas seguirei com este nome até que eu venha mudar de idéia.</p>
