Creating tables and forms

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </hgroup>
         <nav>
             <a href="index.html" class="button">Home</a>
-            <a href="#" class="button">Contato</a>
+            <a href="contact.html" class="button">Contato</a>
             <a href="login.html" class="button">Área Restrita</a>
         </nav>
     </header>
@@ -25,16 +25,13 @@
         <section>
             <nav>
                 <ul>
-                    <li><a href="upload.html">Upload</a></li>
-                    <li><a href="#">Item 1</a></li>
-                    <li><a href="#">Item 2</a></li>
-                    <li><a href="#">Item 3</a></li>
-                    <li><a href="#">Item 4</a></li>
-                    <li><a href="#">Item 5</a></li>
-                    <li><a href="#">Item 6</a></li>
-                    <li><a href="#">Item 7</a></li>
-                    <li><a href="#">Item 8</a></li>
-                    <li><a href="#">Item 9</a></li>
+                    <li><a href="upload.html">Galeria</a></li>
+                    <li><a href="investment.html">Investimento</a></li>
+                    <li><a href="register.html">Registrar Usuário</a></li>
+                    <li><a href="expense.html">Despesas do Mês</a></li>
+                    <li><a href="revenue.html">Receitas do Mês</a></li>
+                    <li><a href="job.html">Carteira de Trabalho</a></li>
+                    <li><a href="paysheet.html">Holerite</a></li>
                 </ul>
             </nav>
             <article id="content">
