Finishing first table and forms version

--- a/job.html
+++ b/job.html
@@ -29,26 +29,26 @@
         <thead>
             <tr>
                 <th scope="row">Empregador</th>
-                <td colspan="3"></td>
+                <td colspan="3">ATT Global Network Services Brasil Ltda</td>
             </tr>
             <tr>
                 <th scope="row">CNPJ</th>
-                <td></td>
+                <td>03.341.093/0001-06</td>
                 <th scope="row">Data de Admissão</th>
-                <td></td>
+                <td>01/02/2018</td>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <th scope="row">Salário Atual</th>
-                <td></td>
-                <th scope="row">Início</th>
+                <td>R$ 0</td>
+                <th scope="row">Atualizado em</th>
                 <td></td>
             </tr>
             <tr>
                 <th scope="row">Salário</th>
-                <td></td>
-                <th scope="row">Início</th>
+                <td>R$ 0</td>
+                <th scope="row">Atualizado em</th>
                 <td></td>
             </tr>
         </tbody>
