--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <li><a href="expense.html">Despesas do Mês</a></li>
                     <li><a href="revenue.html">Receitas do Mês</a></li>
                     <li><a href="job.html">Carteira de Trabalho</a></li>
+                    <li><a href="bank.html">Dados Bancários</a></li>
                     <li><a href="paysheet.html">Holerite</a></li>
                 </ul>
             </nav>
