--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <form action="test.php" method="post">
+    <form action="home.html" method="post">
         <fieldset>
             <legend>Área Restrita</legend>
             <label for="isuer">Usuário</label>
